Reduce memory allocations (#24)
* update bs+dep

* reduce allocations by a ton

* stop sending rain packet every tick

* small cleanup

* these will never be null at this point

* chill with the enum[] allocations